# sxd_html

./: .gitignore  .gitignore.in  .octocov.yml  Cargo.toml  README.md  _typos.toml  deny.toml
.cargo/: config.toml
.github/workflows/: check-push-protection.yml  deny.yml  publish.yml  test.yml
examples/: github_trending.html  github_trending.rs
scripts/: check-cargo-version-tag.sh  test-check-cargo-version-tag.sh
src/: error.rs  handle.rs  lib.rs  util.rs
tests/: integration_tests.rs
