[package]
edition = "2018"
name = "sxd_html"
version = "0.1.2"
license = "MIT OR Apache-2.0"
authors = ["diogo464 <diogo464@protonmail.com>", "kitsuyui <kitsuyui@kitsuyui.com>"]
description = "Add HTML parsing support to sxd_document. This enables to evaluate XPath expressions on HTML documents."
categories = ["web-programming", "parser-implementations"]
keywords = ["sxd_document", "sxd_xpath", "html5ever"]
repository = "https://github.com/kitsuyui/sxd_html"

[dependencies]
html5ever = "0.29.0"
sxd-document = "0.3.2"

[dev-dependencies]
anyhow = "1.0.82"
reqwest = { version="0.12.4", features=["blocking"] }
sxd-xpath = "0.4.2"
